--- a/src/output.css
+++ b/src/output.css
@@ -209,6 +209,9 @@
   .left-\[50\%\] {
     left: 50%;
   }
+  .z-1 {
+    z-index: 1;
+  }
   .container {
     width: 100%;
     @media (width >= 40rem) {
