📌 Created Intro Section & Updated Header
Added the Intro Section for better content structure.

Made adjustments to the Header for improved design and functionality.

✅ Enhancing the website step by step! 🚀

--- a/src/input.css
+++ b/src/input.css
@@ -1,9 +1,8 @@
 @import "tailwindcss";
 
 /* @font-face {
-  font-family: "grace";
-  src: url("../public/fonts/Covered_By_Your_Grace/CoveredByYourGrace-Regular.ttf")
-    format("ttf");
+  font-family: "poppins";
+  src: url("../public/fonts/Poppins/Poppins-Bold.ttf") format(".ttf");
 } */
 
 .font-grace {
