--- a/src/output.css
+++ b/src/output.css
@@ -15,12 +15,16 @@
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
     --text-base--line-height: calc(1.5 / 1);
+    --text-lg: 1.125rem;
+    --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
+    --text-7xl: 4.5rem;
+    --text-7xl--line-height: 1;
     --text-8xl: 6rem;
     --text-8xl--line-height: 1;
     --font-weight-normal: 400;
@@ -228,6 +232,9 @@
   .bottom-32 {
     bottom: calc(var(--spacing) * 32);
   }
+  .bottom-\[60px\] {
+    bottom: 60px;
+  }
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
@@ -291,8 +298,17 @@
   .my-20 {
     margin-block: calc(var(--spacing) * 20);
   }
+  .my-\[10px\] {
+    margin-block: 10px;
+  }
   .my-\[20px\] {
     margin-block: 20px;
+  }
+  .my-\[80px\] {
+    margin-block: 80px;
+  }
+  .my-\[100px\] {
+    margin-block: 100px;
   }
   .-mt-16 {
     margin-top: calc(var(--spacing) * -16);
@@ -336,6 +352,18 @@
   .mt-\[20px\] {
     margin-top: 20px;
   }
+  .mt-\[50px\] {
+    margin-top: 50px;
+  }
+  .mt-\[80px\] {
+    margin-top: 80px;
+  }
+  .mt-\[100px\] {
+    margin-top: 100px;
+  }
+  .mt-\[120px\] {
+    margin-top: 120px;
+  }
   .flex {
     display: flex;
   }
@@ -357,8 +385,14 @@
   .h-80 {
     height: calc(var(--spacing) * 80);
   }
+  .h-\[8-\] {
+    height: 8-;
+  }
   .h-\[40vh\] {
     height: 40vh;
+  }
+  .h-\[80vh\] {
+    height: 80vh;
   }
   .h-\[300px\] {
     height: 300px;
@@ -470,6 +504,9 @@
   .justify-around {
     justify-content: space-around;
   }
+  .justify-baseline {
+    justify-content: baseline;
+  }
   .justify-between {
     justify-content: space-between;
   }
@@ -556,6 +593,18 @@
   .bg-\[url\(\'\.\.\/public\/assets\/images\/servicesImage4\.png\'\)\] {
     background-image: url('../public/assets/images/servicesImage4.png');
   }
+  .bg-\[url\(\'\.\.\/public\/assets\/images\/video\.png\'\)\] {
+    background-image: url('../public/assets/images/video.png');
+  }
+  .bg-\[url\(\'\.\.\/public\/assets\/images\/videoS\.png\'\)\] {
+    background-image: url('../public/assets/images/videoS.png');
+  }
+  .bg-\[url\(\'\.\.\/public\/assets\/images\/videoSectionIma\.png\'\)\] {
+    background-image: url('../public/assets/images/videoSectionIma.png');
+  }
+  .bg-\[url\(\'\.\.\/public\/assets\/images\/videoSectionImage\.png\'\)\] {
+    background-image: url('../public/assets/images/videoSectionImage.png');
+  }
   .bg-center {
     background-position: center;
   }
@@ -582,6 +631,12 @@
   }
   .p-\[20px\] {
     padding: 20px;
+  }
+  .p-\[30px\] {
+    padding: 30px;
+  }
+  .p-\[50px\] {
+    padding: 50px;
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
@@ -613,8 +668,14 @@
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
   }
+  .py-5 {
+    padding-block: calc(var(--spacing) * 5);
+  }
   .py-\[10px\] {
     padding-block: 10px;
+  }
+  .py-\[50px\] {
+    padding-block: 50px;
   }
   .text-center {
     text-align: center;
@@ -627,6 +688,10 @@
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
   }
+  .text-7xl {
+    font-size: var(--text-7xl);
+    line-height: var(--tw-leading, var(--text-7xl--line-height));
+  }
   .text-8xl {
     font-size: var(--text-8xl);
     line-height: var(--tw-leading, var(--text-8xl--line-height));
@@ -634,6 +699,10 @@
   .text-base {
     font-size: var(--text-base);
     line-height: var(--tw-leading, var(--text-base--line-height));
+  }
+  .text-lg {
+    font-size: var(--text-lg);
+    line-height: var(--tw-leading, var(--text-lg--line-height));
   }
   .text-sm {
     font-size: var(--text-sm);
