--- a/src/output.css
+++ b/src/output.css
@@ -21,8 +21,12 @@
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
+    --text-3xl: 1.875rem;
+    --text-3xl--line-height: calc(2.25 / 1.875);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
+    --text-5xl: 3rem;
+    --text-5xl--line-height: 1;
     --text-7xl: 4.5rem;
     --text-7xl--line-height: 1;
     --text-8xl: 6rem;
@@ -286,6 +290,9 @@
       max-width: 96rem;
     }
   }
+  .m-\[100px\] {
+    margin: 100px;
+  }
   .mx-auto {
     margin-inline: auto;
   }
@@ -364,6 +371,9 @@
   .mt-\[120px\] {
     margin-top: 120px;
   }
+  .mb-\[30px\] {
+    margin-bottom: 30px;
+  }
   .flex {
     display: flex;
   }
@@ -397,6 +407,9 @@
   .h-\[300px\] {
     height: 300px;
   }
+  .h-\[350px\] {
+    height: 350px;
+  }
   .h-auto {
     height: auto;
   }
@@ -405,6 +418,9 @@
   }
   .w-\[20\%\] {
     width: 20%;
+  }
+  .w-\[20\] {
+    width: 20;
   }
   .w-\[25\%\] {
     width: 25%;
@@ -495,6 +511,9 @@
   .flex-col {
     flex-direction: column;
   }
+  .flex-wrap {
+    flex-wrap: wrap;
+  }
   .items-center {
     align-items: center;
   }
@@ -568,6 +587,30 @@
   }
   .bg-white {
     background-color: var(--color-white);
+  }
+  .bg-\[url\(\'\.\.\/public\/assets\/images\/explore\.png\'\)\] {
+    background-image: url('../public/assets/images/explore.png');
+  }
+  .bg-\[url\(\'\.\.\/public\/assets\/images\/exploreProjectImg1\.png\'\)\] {
+    background-image: url('../public/assets/images/exploreProjectImg1.png');
+  }
+  .bg-\[url\(\'\.\.\/public\/assets\/images\/exploreProjectImg2\.png\'\)\] {
+    background-image: url('../public/assets/images/exploreProjectImg2.png');
+  }
+  .bg-\[url\(\'\.\.\/public\/assets\/images\/exploreProjectImg3\.png\'\)\] {
+    background-image: url('../public/assets/images/exploreProjectImg3.png');
+  }
+  .bg-\[url\(\'\.\.\/public\/assets\/images\/exploreProjectImg4\.png\'\)\] {
+    background-image: url('../public/assets/images/exploreProjectImg4.png');
+  }
+  .bg-\[url\(\'\.\.\/public\/assets\/images\/exploreProjects\.png\'\)\] {
+    background-image: url('../public/assets/images/exploreProjects.png');
+  }
+  .bg-\[url\(\'\.\.\/public\/assets\/images\/exploreProjectsImg\.png\'\)\] {
+    background-image: url('../public/assets/images/exploreProjectsImg.png');
+  }
+  .bg-\[url\(\'\.\.\/public\/assets\/images\/exploreProjectsImg1\.png\'\)\] {
+    background-image: url('../public/assets/images/exploreProjectsImg1.png');
   }
   .bg-\[url\(\'\.\.\/public\/assets\/images\/heroImage\.png\'\)\] {
     background-image: url('../public/assets/images/heroImage.png');
@@ -656,6 +699,9 @@
   .px-14 {
     padding-inline: calc(var(--spacing) * 14);
   }
+  .px-\[18px\] {
+    padding-inline: 18px;
+  }
   .px-\[20px\] {
     padding-inline: 20px;
   }
@@ -684,9 +730,17 @@
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
+  .text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
+  }
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
+  }
+  .text-5xl {
+    font-size: var(--text-5xl);
+    line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
   .text-7xl {
     font-size: var(--text-7xl);
