📝 Created Left Side of Testimonial Container Using Tailwind CSS
Designed the left side of the Testimonial Container.

Styled using Tailwind CSS for consistency with the Figma design.

✅ Testimonial section progress underway! 🚀

--- a/src/output.css
+++ b/src/output.css
@@ -329,6 +329,9 @@
   .mt-2\.5 {
     margin-top: calc(var(--spacing) * 2.5);
   }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
   }
@@ -356,8 +359,14 @@
   .mt-20 {
     margin-top: calc(var(--spacing) * 20);
   }
+  .mt-28 {
+    margin-top: calc(var(--spacing) * 28);
+  }
   .mt-\[20px\] {
     margin-top: 20px;
+  }
+  .mt-\[30px\] {
+    margin-top: 30px;
   }
   .mt-\[50px\] {
     margin-top: 50px;
@@ -400,6 +409,15 @@
   }
   .h-\[40vh\] {
     height: 40vh;
+  }
+  .h-\[60vh\] {
+    height: 60vh;
+  }
+  .h-\[70vh\] {
+    height: 70vh;
+  }
+  .h-\[80\] {
+    height: 80;
   }
   .h-\[80vh\] {
     height: 80vh;
@@ -531,6 +549,9 @@
   }
   .justify-center {
     justify-content: center;
+  }
+  .justify-items-center {
+    justify-items: center;
   }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
@@ -695,6 +716,9 @@
   }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
+  }
+  .px-11 {
+    padding-inline: calc(var(--spacing) * 11);
   }
   .px-14 {
     padding-inline: calc(var(--spacing) * 14);
