--- a/src/output.css
+++ b/src/output.css
@@ -21,8 +21,6 @@
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
-    --text-3xl: 1.875rem;
-    --text-3xl--line-height: calc(2.25 / 1.875);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
     --text-5xl: 3rem;
@@ -206,23 +204,17 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-20 {
+    top: calc(var(--spacing) * 20);
+  }
+  .top-\[85px\] {
+    top: 85px;
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
-  .right-1 {
-    right: calc(var(--spacing) * 1);
-  }
   .right-8 {
     right: calc(var(--spacing) * 8);
-  }
-  .right-10 {
-    right: calc(var(--spacing) * 10);
-  }
-  .right-12 {
-    right: calc(var(--spacing) * 12);
-  }
-  .right-14 {
-    right: calc(var(--spacing) * 14);
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
@@ -242,29 +234,11 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
-  .left-2 {
-    left: calc(var(--spacing) * 2);
-  }
-  .left-14 {
-    left: calc(var(--spacing) * 14);
-  }
-  .left-18 {
-    left: calc(var(--spacing) * 18);
+  .left-9 {
+    left: calc(var(--spacing) * 9);
   }
   .left-24 {
     left: calc(var(--spacing) * 24);
-  }
-  .left-28 {
-    left: calc(var(--spacing) * 28);
-  }
-  .left-32 {
-    left: calc(var(--spacing) * 32);
-  }
-  .left-48 {
-    left: calc(var(--spacing) * 48);
-  }
-  .left-80 {
-    left: calc(var(--spacing) * 80);
   }
   .left-\[50\%\] {
     left: 50%;
@@ -290,14 +264,11 @@
       max-width: 96rem;
     }
   }
-  .m-\[100px\] {
-    margin: 100px;
+  .m-\[50px\] {
+    margin: 50px;
   }
   .mx-auto {
     margin-inline: auto;
-  }
-  .my-2 {
-    margin-block: calc(var(--spacing) * 2);
   }
   .my-5 {
     margin-block: calc(var(--spacing) * 5);
@@ -305,20 +276,8 @@
   .my-20 {
     margin-block: calc(var(--spacing) * 20);
   }
-  .my-\[10px\] {
-    margin-block: 10px;
-  }
   .my-\[20px\] {
     margin-block: 20px;
-  }
-  .my-\[80px\] {
-    margin-block: 80px;
-  }
-  .my-\[100px\] {
-    margin-block: 100px;
-  }
-  .-mt-16 {
-    margin-top: calc(var(--spacing) * -16);
   }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
@@ -329,17 +288,11 @@
   .mt-2\.5 {
     margin-top: calc(var(--spacing) * 2.5);
   }
-  .mt-4 {
-    margin-top: calc(var(--spacing) * 4);
-  }
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
   }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
-  }
-  .mt-7 {
-    margin-top: calc(var(--spacing) * 7);
   }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
@@ -353,9 +306,6 @@
   .mt-14 {
     margin-top: calc(var(--spacing) * 14);
   }
-  .mt-16 {
-    margin-top: calc(var(--spacing) * 16);
-  }
   .mt-20 {
     margin-top: calc(var(--spacing) * 20);
   }
@@ -368,17 +318,8 @@
   .mt-\[30px\] {
     margin-top: 30px;
   }
-  .mt-\[50px\] {
-    margin-top: 50px;
-  }
-  .mt-\[80px\] {
-    margin-top: 80px;
-  }
   .mt-\[100px\] {
     margin-top: 100px;
-  }
-  .mt-\[120px\] {
-    margin-top: 120px;
   }
   .mb-\[30px\] {
     margin-bottom: 30px;
@@ -392,9 +333,6 @@
   .table {
     display: table;
   }
-  .h-8 {
-    height: calc(var(--spacing) * 8);
-  }
   .h-20 {
     height: calc(var(--spacing) * 20);
   }
@@ -404,29 +342,32 @@
   .h-80 {
     height: calc(var(--spacing) * 80);
   }
-  .h-\[8-\] {
-    height: 8-;
+  .h-\[30-\] {
+    height: 30-;
+  }
+  .h-\[30px\] {
+    height: 30px;
   }
   .h-\[40vh\] {
     height: 40vh;
   }
-  .h-\[60vh\] {
-    height: 60vh;
-  }
   .h-\[70vh\] {
     height: 70vh;
   }
-  .h-\[80\] {
-    height: 80;
+  .h-\[100p\] {
+    height: 100p;
   }
-  .h-\[80vh\] {
-    height: 80vh;
-  }
-  .h-\[300px\] {
-    height: 300px;
+  .h-\[100px\] {
+    height: 100px;
   }
   .h-\[350px\] {
     height: 350px;
+  }
+  .h-\[600\] {
+    height: 600;
+  }
+  .h-\[600px\] {
+    height: 600px;
   }
   .h-auto {
     height: auto;
@@ -434,11 +375,11 @@
   .w-24 {
     width: calc(var(--spacing) * 24);
   }
+  .w-\[0\] {
+    width: 0;
+  }
   .w-\[20\%\] {
     width: 20%;
-  }
-  .w-\[20\] {
-    width: 20;
   }
   .w-\[25\%\] {
     width: 25%;
@@ -446,14 +387,41 @@
   .w-\[30\%\] {
     width: 30%;
   }
+  .w-\[30px\] {
+    width: 30px;
+  }
   .w-\[45\%\] {
     width: 45%;
+  }
+  .w-\[45\] {
+    width: 45;
   }
   .w-\[50\%\] {
     width: 50%;
   }
+  .w-\[70\%\] {
+    width: 70%;
+  }
   .w-\[80\%\] {
     width: 80%;
+  }
+  .w-\[90\%\] {
+    width: 90%;
+  }
+  .w-\[100\%\] {
+    width: 100%;
+  }
+  .w-\[100\[x\]\] {
+    width: 100[x];
+  }
+  .w-\[100\] {
+    width: 100;
+  }
+  .w-\[100px\] {
+    width: 100px;
+  }
+  .w-\[full\] {
+    width: full;
   }
   .w-full {
     width: 100%;
@@ -478,40 +446,16 @@
     --tw-translate-x: calc(var(--spacing) * -8);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .-translate-x-12 {
-    --tw-translate-x: calc(var(--spacing) * -12);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-x-14 {
     --tw-translate-x: calc(var(--spacing) * -14);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-x-50 {
-    --tw-translate-x: calc(var(--spacing) * -50);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-x-\[12\] {
-    --tw-translate-x: calc(12 * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-x-\[50\%\] {
     --tw-translate-x: calc(50% * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .-translate-x-\[50\] {
-    --tw-translate-x: calc(50 * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-y-12 {
-    --tw-translate-y: calc(var(--spacing) * -12);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-y-\[50\%\] {
     --tw-translate-y: calc(50% * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-y-\[50\] {
-    --tw-translate-y: calc(50 * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .transform {
@@ -541,17 +485,23 @@
   .justify-around {
     justify-content: space-around;
   }
-  .justify-baseline {
-    justify-content: baseline;
-  }
   .justify-between {
     justify-content: space-between;
   }
   .justify-center {
     justify-content: center;
   }
-  .justify-items-center {
-    justify-items: center;
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
+  .gap-2 {
+    gap: calc(var(--spacing) * 2);
+  }
+  .gap-2\.5 {
+    gap: calc(var(--spacing) * 2.5);
+  }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
   }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
@@ -590,9 +540,20 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
+  }
+  .border-dashed {
+    --tw-border-style: dashed;
+    border-style: dashed;
+  }
   .border-none {
     --tw-border-style: none;
     border-style: none;
+  }
+  .border-\[\#eec044\] {
+    border-color: #eec044;
   }
   .bg-\[\#4baf47\] {
     background-color: #4baf47;
@@ -609,9 +570,6 @@
   .bg-white {
     background-color: var(--color-white);
   }
-  .bg-\[url\(\'\.\.\/public\/assets\/images\/explore\.png\'\)\] {
-    background-image: url('../public/assets/images/explore.png');
-  }
   .bg-\[url\(\'\.\.\/public\/assets\/images\/exploreProjectImg1\.png\'\)\] {
     background-image: url('../public/assets/images/exploreProjectImg1.png');
   }
@@ -624,26 +582,8 @@
   .bg-\[url\(\'\.\.\/public\/assets\/images\/exploreProjectImg4\.png\'\)\] {
     background-image: url('../public/assets/images/exploreProjectImg4.png');
   }
-  .bg-\[url\(\'\.\.\/public\/assets\/images\/exploreProjects\.png\'\)\] {
-    background-image: url('../public/assets/images/exploreProjects.png');
-  }
-  .bg-\[url\(\'\.\.\/public\/assets\/images\/exploreProjectsImg\.png\'\)\] {
-    background-image: url('../public/assets/images/exploreProjectsImg.png');
-  }
-  .bg-\[url\(\'\.\.\/public\/assets\/images\/exploreProjectsImg1\.png\'\)\] {
-    background-image: url('../public/assets/images/exploreProjectsImg1.png');
-  }
   .bg-\[url\(\'\.\.\/public\/assets\/images\/heroImage\.png\'\)\] {
     background-image: url('../public/assets/images/heroImage.png');
-  }
-  .bg-\[url\(\'\.\.\/public\/assets\/images\/serImage\.png\'\)\] {
-    background-image: url('../public/assets/images/serImage.png');
-  }
-  .bg-\[url\(\'\.\.\/public\/assets\/images\/servImage\.png\'\)\] {
-    background-image: url('../public/assets/images/servImage.png');
-  }
-  .bg-\[url\(\'\.\.\/public\/assets\/images\/servicesImage\.png\'\)\] {
-    background-image: url('../public/assets/images/servicesImage.png');
   }
   .bg-\[url\(\'\.\.\/public\/assets\/images\/servicesImage1\.png\'\)\] {
     background-image: url('../public/assets/images/servicesImage1.png');
@@ -656,15 +596,6 @@
   }
   .bg-\[url\(\'\.\.\/public\/assets\/images\/servicesImage4\.png\'\)\] {
     background-image: url('../public/assets/images/servicesImage4.png');
-  }
-  .bg-\[url\(\'\.\.\/public\/assets\/images\/video\.png\'\)\] {
-    background-image: url('../public/assets/images/video.png');
-  }
-  .bg-\[url\(\'\.\.\/public\/assets\/images\/videoS\.png\'\)\] {
-    background-image: url('../public/assets/images/videoS.png');
-  }
-  .bg-\[url\(\'\.\.\/public\/assets\/images\/videoSectionIma\.png\'\)\] {
-    background-image: url('../public/assets/images/videoSectionIma.png');
   }
   .bg-\[url\(\'\.\.\/public\/assets\/images\/videoSectionImage\.png\'\)\] {
     background-image: url('../public/assets/images/videoSectionImage.png');
@@ -699,17 +630,11 @@
   .p-\[30px\] {
     padding: 30px;
   }
-  .p-\[50px\] {
-    padding: 50px;
-  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
-  }
-  .px-8 {
-    padding-inline: calc(var(--spacing) * 8);
   }
   .px-9 {
     padding-inline: calc(var(--spacing) * 9);
@@ -729,17 +654,26 @@
   .px-\[20px\] {
     padding-inline: 20px;
   }
+  .px-\[30px\] {
+    padding-inline: 30px;
+  }
+  .px-\[35\] {
+    padding-inline: 35;
+  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
   .py-2\.5 {
     padding-block: calc(var(--spacing) * 2.5);
   }
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
+  }
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
   }
-  .py-5 {
-    padding-block: calc(var(--spacing) * 5);
+  .py-6 {
+    padding-block: calc(var(--spacing) * 6);
   }
   .py-\[10px\] {
     padding-block: 10px;
@@ -753,10 +687,6 @@
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
-  }
-  .text-3xl {
-    font-size: var(--text-3xl);
-    line-height: var(--tw-leading, var(--text-3xl--line-height));
   }
   .text-4xl {
     font-size: var(--text-4xl);
@@ -794,6 +724,13 @@
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
   }
+  .text-\[40px\] {
+    font-size: 40px;
+  }
+  .font-\[40px\] {
+    --tw-font-weight: 40px;
+    font-weight: 40px;
+  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -814,6 +751,9 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .text-\[\#1F1E17\] {
+    color: #1F1E17;
+  }
   .text-\[\#1f1e17\] {
     color: #1f1e17;
   }
@@ -828,6 +768,9 @@
   }
   .text-\[\#eec044\] {
     color: #eec044;
+  }
+  .text-\[4xl\] {
+    color: 4xl;
   }
   .text-black {
     color: var(--color-black);
