added the hamburger for small devices.

--- a/src/input.css
+++ b/src/input.css
@@ -3,6 +3,16 @@
 /* @font-face {
   font-family: "poppins";
   src: url("../public/fonts/Poppins/Poppins-Bold.ttf") format(".ttf");
+  font-weight: normal;
+  font-style: normal;
+} */
+
+/* @font-face {
+  font-family: "grace";
+  src: url("../public/fonts/Covered_By_Your_Grace/CoveredByYourGrace-Regular.ttf")
+    format(".ttf");
+  font-weight: normal;
+  font-style: normal;
 } */
 
 .font-grace {
